grammar.js
    source_file: ($) => repeat($._declaration),

    comment: (_) =>
      token(
        prec(
          2,
        choice(
          seq("//", /[^\n]*/),
          seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"),
        ),
        ),
      ),

    _declaration: ($) =>
      choice(
        $.top_run_declaration,
        $.import_declaration,
        $.load_declaration,
        $.private_section_declaration,
        $.thread_local_declaration,
        $.named_declaration,
      ),

    top_run_declaration: ($) =>
      seq(
        "#run",
        choice(
          seq($.arrow, field("type", $._type), field("body", $.block)),
          field("body", $.block),
          field("value", $._expression),
        ),
        optional(";"),
      ),

    import_declaration: ($) =>
      seq("#import", field("module", $.string_literal), optional(";")),

    load_declaration: ($) =>
      seq("#load", field("path", $.string_literal), optional(";")),

    private_section_declaration: (_) =>
      seq("#private_section", optional(seq(",", "siblings")), optional(";")),

    named_declaration: ($) =>
      seq(
        field("name", $.declaration_name),
        choice(
          seq("::", $._declaration_body),
          $.global_variable_declaration_tail,
          $.typed_constant_declaration_tail,
        ),
      ),

    declaration_name: ($) => choice($.identifier, $.quoted_operator),

    _declaration_body: ($) =>
      choice(
        $.qualified_import_declaration,
        $.header_type_declaration,
        $.library_declaration,
        $.function_pointer_type_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.union_declaration,
        $.function_declaration,
        $.constant_declaration_body,
      ),

    qualified_import_declaration: ($) =>
      seq("#import", field("module", $.string_literal), optional(";")),

    library_declaration: ($) =>
      seq(choice("#library", "#system_library"), field("path", $.string_literal), optional(";")),

    function_pointer_type_declaration: ($) =>
      seq(
        "#fn_ptr",
        field("parameters", $.fn_ptr_parameter_list),
        optional(seq($.arrow, field("return_type", $._type))),
        repeat(choice("#c_call", "#no_context")),
        optional(";"),
      ),

    constant_declaration_body: ($) =>
      seq(field("value", $._expression), optional(";")),

    global_variable_declaration_tail: ($) =>
      seq(
        choice(
          seq(":=", field("value", $._expression)),
          seq(
            ":",
            optional(field("type", $._type)),
            optional(seq("=", field("value", $._expression))),
          ),
        ),
        optional(";"),
      ),

    struct_declaration: ($) =>
      seq("struct", "{", repeat(choice($.struct_field, $.empty_field)), "}"),

    empty_field: ($) =>
      seq(
        "#empty",
        ":",
        commaSep1(field("type", $._type)),
        optional($._separator),
      ),

    struct_field: ($) =>
      seq(
        optional("using"),
        optional(seq("#as", optional("using"))),
        field("name", $.identifier),
        ":",
        field("type", $._type),
        optional(seq("=", field("default", $._expression))),
        optional($._separator),
      ),

    enum_declaration: ($) =>
      seq("enum", "{", repeat($.enum_variant), "}"),

    enum_variant: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("::", field("value", $.integer_literal))),
        optional($._separator),
      ),

    union_declaration: ($) =>
      seq("union", optional("#raw"), "{", repeat($.union_field), "}"),

    union_field: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type),
        optional($._separator),
      ),

    function_declaration: ($) =>
      seq(
        field("parameters", $.parameter_list),
        optional(seq($.arrow, field("return_type", $._type))),
        repeat($._function_modifier),
        repeat($.where_clause),
        choice(field("body", $.block), ";"),
      ),

    parameter_list: ($) => seq("(", commaSep(choice($.parameter, $.empty_parameter, $.c_varargs_parameter)), ")"),

    fn_ptr_parameter_list: ($) =>
      seq("(", commaSep(choice($.fn_ptr_parameter, $.c_varargs_parameter)), ")"),

    fn_ptr_parameter: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type),
      ),

    empty_parameter: ($) =>
      seq(
        "#empty",
        ":",
        commaSep1(field("type", $._type)),
      ),

    parameter: ($) =>
      seq(
        optional("using"),
        field("name", $.binding_list),
        ":",
        field("type", choice($.variadic_type, $._type)),
        optional(seq("=", field("default", $._expression))),
      ),

    binding_list: ($) => seq($._binding_name, repeat(seq(",", $._binding_name))),

    _binding_name: ($) => choice($.identifier, $.non_hygienic_identifier),

    _function_modifier: ($) =>
      choice(
        $.operator_directive,
        $.precedence_directive,
        "#prefix",
        "#suffix",
        "#expand",
        "#magic",
        $.magic_directive,
        $.foreign_directive,
        "#c_call",
        "#no_context",
        "#dump",
        "#fallback",
        "#must",
        "#noreturn",
      ),

    where_clause: ($) => seq("where", field("condition", $._expression)),

    operator_directive: ($) =>
      seq(
        "#operator",
        "(",
        field("mode", $.identifier),
        optional(seq(",", field("level", $.integer_literal))),
        ")",
      ),

    magic_directive: ($) =>
      seq("#magic", field("name", $.string_literal)),

    foreign_directive: ($) =>
      seq(
        "#foreign",
        field("library", choice($.identifier, $.string_literal)),
        optional(field("symbol", $.string_literal)),
      ),

    block: ($) => seq("{", repeat($._statement), "}"),

    _statement: ($) =>
      choice(
        $.nested_declaration,
        $.inline_bytes_statement,
        $.inline_asm_statement,
        $.label_statement,
        $.return_statement,
        $.while_statement,
        $.for_statement,
        $.defer_statement,
        $.using_statement,
        $.switch_statement,
        $.if_statement,
        $.push_context_statement,
        $.push_allocator_statement,
        $.static_if_statement,
        $.insert_statement,
        $.falling_statement,
        $.variable_declaration,
        $.assignment_statement,
        $.expression_statement,
      ),

    nested_declaration: ($) =>
      seq(
        field("name", $.declaration_name),
        "::",
        choice(
          $.struct_declaration,
          $.enum_declaration,
          $.union_declaration,
          $.function_declaration,
        ),
      ),

    label_statement: ($) => prec(1, seq($.label, ";")),

    return_statement: ($) =>
      prec.right(seq("return", optional(commaSep1($._expression)), optional(";"))),

    while_statement: ($) =>
      seq("while", field("condition", $._expression), field("body", $.block)),

    switch_statement: ($) =>
      seq(
        "if",
        field("subject", $._expression),
        field("operator", $.operator),
        "{",
        repeat(choice($.case_clause, $.default_clause)),
        "}",
      ),

    case_clause: ($) =>
      seq("case", field("value", $._expression), ";", repeat($._statement)),

    default_clause: ($) =>
      seq("else", ";", repeat($._statement)),

    _if_body: ($) => choice($.block, $._single_statement),

    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $._expression),
          field("consequence", $._if_body),
          optional(seq("else", field("alternative", $._if_body))),
        ),
      ),

    insert_statement: ($) =>
      seq("#insert", field("value", $._expression), optional(";")),

    falling_statement: (_) => seq("#falling", optional(";")),

    variable_declaration: ($) =>
      prec.right(
        seq(
          field("name", $.binding_list),
          choice(
            seq(":=", field("value", $._expression)),
            seq("::", field("value", $._expression)),
            seq(
              ":",
              optional(field("type", $._type)),
              optional(
                choice(
                  seq("=", field("value", $._expression)),
                  seq("::", field("value", $._expression)),
                  seq(":", field("value", $._expression)),
                ),
              ),
            ),
          ),
          optional(";"),
        ),
      ),

    assignment_statement: ($) =>
      prec.right(
        PREC.assignment + 1,
        seq(
          field("left", $._expression),
          field("operator", choice("=", $.assignment_operator)),
          field("right", $._expression),
          optional(";"),
        ),
      ),

    expression_statement: ($) => seq($._expression, optional(";")),

    _type: ($) =>
      choice(
        $.generic_type,
        $.array_type,
        $.layout_type,
        $.c_pointer_type,
        $.pointer_type,
        $.function_type,
        $.tuple_type,
        $.parenthesized_type,
        $.generic_type_variable,
        $.context_type,
        $.named_type,
      ),

    generic_type_variable: ($) => seq("$", field("name", $.identifier)),

    c_pointer_type: ($) =>
      seq("#c_ptr", field("pointer", $.pointer_type)),

    pointer_type: ($) =>
      seq("*", optional("const"), field("pointee", $._type)),

    context_type: (_) => "#Context",

    named_type: ($) => $.identifier,

    _expression: ($) =>
      choice(
        $.assignment_expression,
        $.binary_expression,
        $.range_expression,
        $.unary_expression,
        $.cast_expression,
        $.run_expression,
        $.meaningful_expression,
        $.postfix_expression,
        $._primary_expression,
      ),

    binary_expression: ($) =>
      prec.left(
        PREC.binary,
        seq(
          field("left", $._expression),
          field("operator", $._operator),
          field("right", $._expression),
        ),
      ),

    unary_expression: ($) =>
      prec(
        PREC.unary,
        seq(field("operator", $._prefix_operator), field("argument", $._expression)),
      ),

    run_expression: ($) =>
      prec(
        PREC.unary,
        seq(
          "#run",
          choice(
            seq($.arrow, field("type", $._type), field("body", $.block)),
            field("body", $.block),
            field("value", $._expression),
          ),
        ),
      ),

    postfix_expression: ($) =>
      prec.left(
        PREC.call,
        choice(
          seq(field("function", $._expression), field("arguments", $.argument_list)),
          seq(field("object", $._expression), field("index", $.index_suffix)),
          seq(field("object", $._expression), ".", "cast", "(", field("type", $._type), ")"),
          seq(field("object", $._expression), ".", "*"),
          seq(field("object", $._expression), ".", field("field", $.identifier)),
          seq(field("type", $._expression), field("literal", $.struct_literal)),
          seq(field("argument", $._expression), field("operator", $.quoted_operator)),
        ),
      ),

    argument_list: ($) => seq("(", commaSep($._expression), ")"),

    index_suffix: ($) => seq("[", field("value", $._expression), "]"),

    string_block: ($) => seq("#string", repeat1($.multiline_string_line)),

    char_literal: (_) =>
      token(seq("#char", /[ \t]*/, '"', repeat(choice(/[^"\\\n]/, /\\./)), '"')),

    boolean_literal: (_) => choice("true", "false"),

    label_none_literal: (_) => token(prec(2, "---")),

    context_expression: (_) => "context",

    shorthand_member_expression: ($) => seq(".", field("field", $.identifier)),

    struct_literal: ($) => seq(".{", commaSep($.struct_literal_field), "}"),

    struct_literal_field: ($) =>
      choice(
        seq(".", field("name", $.identifier), "=", field("value", $._expression)),
        field("value", $._expression),
      ),

    array_literal: ($) => seq(".[", commaSep($._expression), "]"),

    _operator: ($) => choice($.operator, $.quoted_operator),

    _prefix_operator: ($) => choice($.prefix_operator, $.quoted_operator),

    _separator: (_) => choice(";", ","),

    identifier: (_) => /[\p{L}_][\p{L}\p{N}_]*/,

    non_hygienic_identifier: (_) => token(seq("`", /[\p{L}_][\p{L}\p{N}_]*/)),

    label: (_) => token(seq("'", /[\p{L}_][\p{L}\p{N}_]*/)),

    quoted_operator: (_) =>
      token(
        choice(
          seq("'", /[\p{L}_][\p{L}\p{N}_]*/, "'"),
          seq("'", /[^\p{L}_'\n\s;][^'\n\s;]*/, "'"),
        ),
      ),

    operator: (_) =>
      token(
        prec(
          1,
          choice(
            "<=>",
            "==",
            "-=",
            "-",
            /[+*\/<>!@%\^&|~?][+\-*\/<>!@%\^&|~?]*=?/,
            /-[+\-*\/<!@%\^&|~?][+\-*\/<>!@%\^&|~?]*=?/,
          ),
        ),
      ),

    prefix_operator: (_) =>
      token(prec(1, choice("!", "-", "+", "~", "*", "&"))),

    assignment_operator: (_) =>
      token(
        prec(
          2,
          choice(
            "+=",
            "-=",
            "*=",
            "/=",
            "%=",
            "<<=",
            "<<|=",
            ">>=",
            ">>|=",
            "&=",
            "|=",
            "^=",
            /[+*\/@%\^&|~?][+\-*\/<>!@%\^&|~?]*=/,
            /-[+\-*\/<!@%\^&|~?][+\-*\/<>!@%\^&|~?]*=/,
          ),
        ),
      ),

    arrow: (_) => token(prec(2, "->")),

    integer_literal: (_) =>
      token(choice(/0[xX][0-9a-fA-F_]+/, /0[bB][01_]+/, /[0-9][0-9_]*/)),

    float_literal: (_) => token(/[0-9][0-9_]*\.[0-9][0-9_]*/),

    string_literal: (_) =>
      token(seq('"', repeat(choice(/[^"\\\n]/, /\\./)), '"')),

    multiline_string_line: (_) => token(seq("\\\\", /[^\n]*/)),
  },
});

function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)), optional(","));
}
