test/corpus/basic.txt
==================
declarations
==================

Vec :: struct {
  x: int;
  y: int = 2;
}

Color :: enum { Red; Green :: 2, Blue; }

Shape :: union #raw {
  point: Vec;
}

main :: () -> int #dump {
  v : Vec = .{ .x = 1, .y = 2 };
  return v.x;
}

---

(source_file
  (named_declaration
    (declaration_name
      (identifier))
    (struct_declaration
      (struct_field
        (identifier)
        (named_type
          (identifier)))
      (struct_field
        (identifier)
        (named_type
          (identifier))
        (integer_literal))))
  (named_declaration
    (declaration_name
      (identifier))
    (enum_declaration
      (enum_variant
        (identifier))
      (enum_variant
        (identifier)
        (integer_literal))
      (enum_variant
        (identifier))))
  (named_declaration
    (declaration_name
      (identifier))
    (union_declaration
      (union_field
        (identifier)
        (named_type
          (identifier)))))
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list)
      (arrow)
      (named_type
        (identifier))
      (block
        (variable_declaration
          (binding_list
            (identifier))
          (named_type
            (identifier))
          (struct_literal
            (struct_literal_field
              (identifier)
              (integer_literal))
            (struct_literal_field
              (identifier)
              (integer_literal))))
        (return_statement
          (postfix_expression
            (identifier)
            (identifier)))))))

==================
directives and code blocks
==================

#import "Prelude";
#load "parts/geometry.glo";
#private_section,siblings;
MSG :: #string
\\hello
\\world

macro :: (body: Code) #expand {
  `tmp := #comptime 1 + 2;
  #insert body;
}

---

(source_file
  (import_declaration
    (string_literal))
  (load_declaration
    (string_literal))
  (private_section_declaration)
  (named_declaration
    (declaration_name
      (identifier))
    (constant_declaration_body
      (string_block
        (multiline_string_line)
        (multiline_string_line))))
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list
        (parameter
          (binding_list
            (identifier))
          (named_type
            (identifier))))
      (expand_directive)
      (block
        (variable_declaration
          (binding_list
            (non_hygienic_identifier))
          (binary_expression
            (run_expression
              (integer_literal))
            (operator)
            (integer_literal)))
        (insert_statement
          (identifier))))))

==================
bare comptime block
==================

VALUE :: #comptime {
  x := 1;
  x += 2;
  return x;
}

#comptime {
  VALUE;
}

---

(source_file
  (named_declaration
    (declaration_name
      (identifier))
    (constant_declaration_body
      (run_expression
        (block
          (variable_declaration
            (binding_list
              (identifier))
            (integer_literal))
          (assignment_statement
            (identifier)
            (assignment_operator)
            (integer_literal))
          (return_statement
            (identifier))))))
  (top_run_declaration
    (block
      (expression_statement
        (identifier)))))

==================
globals and foreign declarations
==================

#import "Context";
libc :: #library "c";
win32 :: #library,system "kernel32";
raylib :: #library,dyn "%USERPROFILE%/.local/raylib/lib/raylib.dll";
sqlite :: #library,static "sqlite3";
FILE :: struct {}
BinOp :: #fn_ptr(a: int, b: int) -> int;
G1 := 42;
G2 : string = "hello";
c_len :: (s: #c_ptr *const s8) -> u64 #foreign "libc" "strlen";
puts :: (text: #c_ptr *const s8) -> s32 #foreign libc;
ctx :: () -> #Context { return context; }

---

(source_file
  (import_declaration
    (string_literal))
  (named_declaration
    (declaration_name
      (identifier))
    (library_declaration
      (string_literal)))
  (named_declaration
    (declaration_name
      (identifier))
    (library_declaration
      (library_modifier)
      (string_literal)))
  (named_declaration
    (declaration_name
      (identifier))
    (library_declaration
      (library_modifier)
      (string_literal)))
  (named_declaration
    (declaration_name
      (identifier))
    (library_declaration
      (library_modifier)
      (string_literal)))
  (named_declaration
    (declaration_name
      (identifier))
    (struct_declaration))
  (named_declaration
    (declaration_name
      (identifier))
    (function_pointer_type_declaration
      (fn_ptr_parameter_list
        (fn_ptr_parameter
          (identifier)
          (named_type
            (identifier)))
        (fn_ptr_parameter
          (identifier)
          (named_type
            (identifier))))
      (arrow)
      (named_type
        (identifier))))
  (named_declaration
    (declaration_name
      (identifier))
    (global_variable_declaration_tail
      (integer_literal)))
  (named_declaration
    (declaration_name
      (identifier))
    (global_variable_declaration_tail
      (named_type
        (identifier))
      (string_literal)))
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list
        (parameter
          (binding_list
            (identifier))
          (c_pointer_type
            (pointer_type
              (named_type
                (identifier))))))
      (arrow)
      (named_type
        (identifier))
      (foreign_directive
        (string_literal)
        (string_literal))))
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list
        (parameter
          (binding_list
            (identifier))
          (c_pointer_type
            (pointer_type
              (named_type
                (identifier))))))
      (arrow)
      (named_type
        (identifier))
      (foreign_directive
        (identifier))))
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list)
      (arrow)
      (context_type)
      (block
        (return_statement
          (context_expression))))))

==================
char literals and postfix forms
==================

main :: () {
  ch := #char "\n";
  bytes := .[16#90, #char "A"];
  item := bytes[0];
  ptr := *item;
  again := ptr.*;
  f := 3.9;
  y := f.cast(s32);
  tag := .Alloc;
}

---

(source_file
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list)
      (block
        (variable_declaration
          (binding_list
            (identifier))
          (char_literal))
        (variable_declaration
          (binding_list
            (identifier))
          (array_literal
            (integer_literal)
            (char_literal)))
        (variable_declaration
          (binding_list
            (identifier))
          (postfix_expression
            (identifier)
            (index_suffix
              (integer_literal))))
        (variable_declaration
          (binding_list
            (identifier))
          (unary_expression
            (prefix_operator)
            (identifier)))
        (variable_declaration
          (binding_list
            (identifier))
          (postfix_expression
            (identifier)))
        (variable_declaration
          (binding_list
            (identifier))
          (float_literal))
        (variable_declaration
          (binding_list
            (identifier))
          (postfix_expression
            (identifier)
            (named_type
              (identifier))))
        (variable_declaration
          (binding_list
            (identifier))
          (shorthand_member_expression
            (identifier)))))))

==================
empty type markers
==================

RangeFull :: struct { #empty: $T, $U; }
zero :: (#empty: $T, $U) -> T where IsInteger(T) { return 0; }

---

(source_file
  (named_declaration
    (declaration_name
      (identifier))
    (struct_declaration
      (empty_field
        (generic_type_variable
          (identifier))
        (generic_type_variable
          (identifier)))))
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list
        (empty_parameter
          (generic_type_variable
            (identifier))
          (generic_type_variable
            (identifier))))
      (arrow)
      (named_type
        (identifier))
      (where_clause
        (postfix_expression
          (identifier)
          (argument_list
            (identifier))))
      (block
        (return_statement
          (integer_literal))))))

==================
fallback and long_goto
==================

worker :: (from: int, flag: bool) -> int {
'task;
  return from;
}

'.*' :: (p: *$T) -> T #operator(suffix) #fallback #magic "ptr_deref";

VALUE :: #comptime -> int {
  target : label = ---;
  x := long_goto(worker, 'task, 40, true);
  return x;
}

main :: () {
  long_goto(worker, 'task, 1, false);
}

---

(source_file
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list
        (parameter
          (binding_list
            (identifier))
          (named_type
            (identifier)))
        (parameter
          (binding_list
            (identifier))
          (named_type
            (identifier))))
      (arrow)
      (named_type
        (identifier))
      (block
        (label_statement
          (label))
        (return_statement
          (identifier)))))
  (named_declaration
    (declaration_name
      (quoted_operator))
    (function_declaration
      (parameter_list
        (parameter
          (binding_list
            (identifier))
          (pointer_type
            (generic_type_variable
              (identifier)))))
      (arrow)
      (named_type
        (identifier))
      (operator_directive
        (identifier))
      (magic_directive
        (string_literal))))
  (named_declaration
    (declaration_name
      (identifier))
    (constant_declaration_body
      (run_expression
        (arrow)
        (named_type
          (identifier))
        (block
          (variable_declaration
            (binding_list
              (identifier))
            (named_type
              (identifier))
            (label_none_literal))
          (variable_declaration
            (binding_list
              (identifier))
            (postfix_expression
              (identifier)
              (argument_list
                (identifier)
                (label)
                (integer_literal)
                (boolean_literal))))
          (return_statement
            (identifier))))))
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list)
      (block
        (expression_statement
          (postfix_expression
            (identifier)
            (argument_list
              (identifier)
              (label)
              (integer_literal)
              (boolean_literal))))))))

==================
single statement if
==================

main :: () -> int {
  x := 0;
  y := 1;
  z := 2;
  if x == 0 return y;
  if y != 0 x += y += z;
  if !ready() return x;
  if x > 10 x = 10;
  else if x < 0 x = 0;
  else x = x + 1;
  return x;
}

---

(source_file
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list)
      (arrow)
      (named_type
        (identifier))
      (block
        (variable_declaration
          (binding_list
            (identifier))
          (integer_literal))
        (variable_declaration
          (binding_list
            (identifier))
          (integer_literal))
        (variable_declaration
          (binding_list
            (identifier))
          (integer_literal))
        (if_statement
          (binary_expression
            (identifier)
            (operator)
            (integer_literal))
          (return_statement
            (identifier)))
        (if_statement
          (binary_expression
            (identifier)
            (operator)
            (integer_literal))
          (assignment_statement
            (if_assignment_start)
            (binary_expression
              (identifier)
              (operator)
              (identifier))))
        (if_statement
          (unary_expression
            (prefix_operator)
            (postfix_expression
              (identifier)
              (argument_list)))
          (return_statement
            (identifier)))
        (if_statement
          (binary_expression
            (identifier)
            (operator)
            (integer_literal))
          (assignment_statement
            (if_assignment_start)
            (integer_literal))
          (if_statement
            (binary_expression
              (identifier)
              (operator)
              (integer_literal))
            (assignment_statement
              (if_assignment_start)
              (integer_literal))
            (assignment_statement
              (if_assignment_start)
              (binary_expression
                (identifier)
                (operator)
                (integer_literal)))))
        (return_statement
          (identifier))))))

==================
operator directives
==================

'@=' :: (a: int, b: int) -> int #operator(assign, 10) {
  return a * 10 + b;
}

'!!' :: (x: int) -> int #operator(prefix) #must { return 0 - x; }
'sq' :: (x: int) -> int #operator(suffix) { return x * x; }

main :: () {
  a := 2;
  a @= 7;
  a +%= 1;
  a <<|= 2;
  b := a @= 3 + 4;
}

---

(source_file
  (named_declaration
    (declaration_name
      (quoted_operator))
    (function_declaration
      (parameter_list
        (parameter
          (binding_list
            (identifier))
          (named_type
            (identifier)))
        (parameter
          (binding_list
            (identifier))
          (named_type
            (identifier))))
      (arrow)
      (named_type
        (identifier))
      (operator_directive
        (identifier)
        (integer_literal))
      (block
        (return_statement
          (binary_expression
            (binary_expression
              (identifier)
              (operator)
              (integer_literal))
            (operator)
            (identifier))))))
  (named_declaration
    (declaration_name
      (quoted_operator))
    (function_declaration
      (parameter_list
        (parameter
          (binding_list
            (identifier))
          (named_type
            (identifier))))
      (arrow)
      (named_type
        (identifier))
      (operator_directive
        (identifier))
      (block
        (return_statement
          (binary_expression
            (integer_literal)
            (operator)
            (identifier))))))
  (named_declaration
    (declaration_name
      (quoted_operator))
    (function_declaration
      (parameter_list
        (parameter
          (binding_list
            (identifier))
          (named_type
            (identifier))))
      (arrow)
      (named_type
        (identifier))
      (operator_directive
        (identifier))
      (block
        (return_statement
          (binary_expression
            (identifier)
            (operator)
            (identifier))))))
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list)
      (block
        (variable_declaration
          (binding_list
            (identifier))
          (integer_literal))
        (assignment_statement
          (identifier)
          (assignment_operator)
          (integer_literal))
        (assignment_statement
          (identifier)
          (assignment_operator)
          (integer_literal))
        (assignment_statement
          (identifier)
          (assignment_operator)
          (integer_literal))
        (variable_declaration
          (binding_list
            (identifier))
          (binary_expression
            (binary_expression
              (identifier)
              (operator)
              (integer_literal))
            (operator)
            (integer_literal)))))))

==================
function directive order and noreturn
==================

OnlyInt :: (T: type) -> bool { return T == int; }

'%%' :: (a: $T, b: T) -> T #fallback #operator(left, 10) #magic "int_add" where OnlyInt(T);
stop :: () #no_context #noreturn { exit(0); }
plain_inline :: () #inline { }
always_inline :: () #inline,always { }
never_inline :: () #inline,never { }

---

(source_file
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list
        (parameter
          (binding_list
            (identifier))
          (named_type
            (identifier))))
      (arrow)
      (named_type
        (identifier))
      (block
        (return_statement
          (binary_expression
            (identifier)
            (operator)
            (identifier))))))
  (named_declaration
    (declaration_name
      (quoted_operator))
    (function_declaration
      (parameter_list
        (parameter
          (binding_list
            (identifier))
          (generic_type_variable
            (identifier)))
        (parameter
          (binding_list
            (identifier))
          (named_type
            (identifier))))
      (arrow)
      (named_type
        (identifier))
      (operator_directive
        (identifier)
        (integer_literal))
      (magic_directive
        (string_literal))
      (where_clause
        (postfix_expression
          (identifier)
          (argument_list
            (identifier))))))
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list)
      (block
        (expression_statement
          (postfix_expression
            (identifier)
            (argument_list
              (integer_literal)))))))
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list)
      (inline_directive)
      (block)))
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list)
      (inline_directive
        (inline_modifier))
      (block)))
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list)
      (inline_directive
        (inline_modifier))
      (block))))

==================
compile errors partial switches and patterns
==================

Foo :: struct { x: int; y: f64; z: Bar; }
Bar :: union { Pax: int; None: void; }

#if OUT.os == {
case .Windows; raylib_case :: #library,dyn "raylib.dll";
else; #compile_error "unsupported";
}

main :: () {
  Io :: #import "Io";
  #compile_error "stop here";

  if #partial x == {
  case #char " "; print("space");
  }

  if #pattern Foo.{ .z = Bar.Pax(val), ... } = f { print("%\n", val); }
  if #pattern Foo.{ .z = .None, ... } = g && f.x < 0 { print("none"); }

  while #pattern {
    Foo.{ .x = *v, .y = 5.67, ... } = f;
    Foo.{ .x, ... } = g;
  } {
    v.* -= 1;
  }

  if #pattern f == {
  case Foo.{ .z = .Pax(other), ... }; print("%\n", other);
  else;
  }

  if #partial #pattern == {
  case {
    Foo.{ .z = .Pax(val1), ... } = f;
    Foo.{ .z = .None, ... } = g;
  }; #falling;
  case f.x == 3; print("three");
  else;
  }
}

---

(source_file
  (named_declaration
    (declaration_name
      (identifier))
    (struct_declaration
      (struct_field
        (identifier)
        (named_type
          (identifier)))
      (struct_field
        (identifier)
        (named_type
          (identifier)))
      (struct_field
        (identifier)
        (named_type
          (identifier)))))
  (named_declaration
    (declaration_name
      (identifier))
    (union_declaration
      (union_field
        (identifier)
        (named_type
          (identifier)))
      (union_field
        (identifier)
        (named_type
          (identifier)))))
  (static_if_declaration
    (postfix_expression
      (identifier)
      (identifier))
    (operator)
    (static_declaration_case_clause
      (shorthand_member_expression
        (identifier))
      (named_declaration
        (declaration_name
          (identifier))
        (library_declaration
          (library_modifier)
          (string_literal))))
    (static_declaration_default_clause
      (compile_error_statement
        (string_literal))))
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list)
      (block
        (nested_declaration
          (declaration_name
            (identifier))
          (qualified_import_declaration
            (string_literal)))
        (compile_error_statement
          (string_literal))
        (switch_statement
          (partial_directive)
          (identifier)
          (operator)
          (case_clause
            (char_literal)
            (expression_statement
              (postfix_expression
                (identifier)
                (argument_list
                  (string_literal))))))
        (if_statement
          (pattern_test_expression
            (pattern_arm
              (pattern_postfix_expression
                (pattern_binding
                  (identifier))
                (struct_pattern
                  (struct_pattern_field
                    (identifier)
                    (pattern_postfix_expression
                      (pattern_postfix_expression
                        (pattern_binding
                          (identifier))
                        (identifier))
                      (pattern_argument_list
                        (pattern_binding
                          (identifier)))))
                  (struct_pattern_field
                    (pattern_rest))))
              (identifier)))
          (block
            (expression_statement
              (postfix_expression
                (identifier)
                (argument_list
                  (string_literal)
                  (identifier))))))
        (if_statement
          (pattern_test_expression
            (pattern_arm
              (pattern_postfix_expression
                (pattern_binding
                  (identifier))
                (struct_pattern
                  (struct_pattern_field
                    (identifier)
                    (shorthand_member_pattern
                      (identifier)))
                  (struct_pattern_field
                    (pattern_rest))))
              (binary_expression
                (binary_expression
                  (identifier)
                  (operator)
                  (postfix_expression
                    (identifier)
                    (identifier)))
                (operator)
                (integer_literal))))
          (block
            (expression_statement
              (postfix_expression
                (identifier)
                (argument_list
                  (string_literal))))))
        (while_statement
          (pattern_test_expression
            (pattern_arm_block
              (pattern_arm
                (pattern_postfix_expression
                  (pattern_binding
                    (identifier))
                  (struct_pattern
                    (struct_pattern_field
                      (identifier)
                      (pointer_pattern
                        (identifier)))
                    (struct_pattern_field
                      (identifier)
                      (float_literal))
                    (struct_pattern_field
                      (pattern_rest))))
                (identifier))
              (pattern_arm
                (pattern_postfix_expression
                  (pattern_binding
                    (identifier))
                  (struct_pattern
                    (struct_pattern_field
                      (shorthand_member_pattern
                        (identifier)))
                    (struct_pattern_field
                      (pattern_rest))))
                (identifier))))
          (block
            (assignment_statement
              (postfix_expression
                (identifier))
              (assignment_operator)
              (integer_literal))))
        (switch_statement
          (identifier)
          (operator)
          (pattern_case_clause
            (pattern_postfix_expression
              (pattern_binding
                (identifier))
              (struct_pattern
                (struct_pattern_field
                  (identifier)
                  (pattern_postfix_expression
                    (shorthand_member_pattern
                      (identifier))
                    (pattern_argument_list
                      (pattern_binding
                        (identifier)))))
                (struct_pattern_field
                  (pattern_rest))))
            (expression_statement
              (postfix_expression
                (identifier)
                (argument_list
                  (string_literal)
                  (identifier)))))
          (default_clause))
        (switch_statement
          (partial_directive)
          (operator)
          (pattern_case_clause
            (pattern_arm_block
              (pattern_arm
                (pattern_postfix_expression
                  (pattern_binding
                    (identifier))
                  (struct_pattern
                    (struct_pattern_field
                      (identifier)
                      (pattern_postfix_expression
                        (shorthand_member_pattern
                          (identifier))
                        (pattern_argument_list
                          (pattern_binding
                            (identifier)))))
                    (struct_pattern_field
                      (pattern_rest))))
                (identifier))
              (pattern_arm
                (pattern_postfix_expression
                  (pattern_binding
                    (identifier))
                  (struct_pattern
                    (struct_pattern_field
                      (identifier)
                      (shorthand_member_pattern
                        (identifier)))
                    (struct_pattern_field
                      (pattern_rest))))
                (identifier)))
            (falling_statement))
          (pattern_case_clause
            (binary_expression
              (postfix_expression
                (identifier)
                (identifier))
              (operator)
              (integer_literal))
            (expression_statement
              (postfix_expression
                (identifier)
                (argument_list
                  (string_literal)))))
          (default_clause))))))

==================
label before comment quote
==================

main :: () {
'while; // 'while is a label
}

---

(source_file
  (named_declaration
    (declaration_name
      (identifier))
    (function_declaration
      (parameter_list)
      (block
        (label_statement
          (label))
        (comment)))))
